--- a/video-dub.ipynb
+++ b/video-dub.ipynb
@@ -6,32 +6,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "# Clone repo and setup\n",
-    "!git clone https://github.com/MUKAMAFrancois/lip-sync-dl-f25.git\n",
-    "%cd lip-sync-dl-f25\n",
+    "# Cell 1: Environment & Path Setup\n",
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "os.chdir('/kaggle/working/lip-sync-dl-f25')\n",
+    "# --- PSC SPECIFIC CONFIG ---\n",
+    "# Force KaggleHub to download to current directory (likely Scratch)\n",
+    "# instead of ~/.cache (Home) which has a small quota.\n",
+    "os.environ['KAGGLEHUB_CACHE_DIR'] = os.getcwd()\n",
+    "\n",
+    "# Clone Repo if needed\n",
+    "if not os.path.exists(\"lip-sync-dl-f25\"):\n",
+    "    !git clone https://github.com/MUKAMAFrancois/lip-sync-dl-f25.git\n",
+    "    %cd lip-sync-dl-f25\n",
+    "else:\n",
+    "    %cd lip-sync-dl-f25\n",
+    "    !git pull\n",
+    "\n",
     "# Install requirements\n",
-    "!pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(\"📦 Installing Dependencies...\")\n",
+    "!pip install -r requirements.txt\n",
+    "!pip install kagglehub face-alignment pytorch-fid\n",
+    "\n",
+    "# Setup Wav2Lip (Models)\n",
     "!python setup_wav2lip.py"
    ]
   },
@@ -41,8 +39,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run preprocessing in Kaggle mode (handles paths, clones Wav2Lip, creates ZIP)\n",
-    "!python preprocess_training_data.py --kaggle"
+    "# Cell 2: Data Download (Safe for HPC)\n",
+    "import kagglehub\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "print(\"⬇️ Downloading Dataset via KaggleHub...\")\n",
+    "# This will now download to ./dataset/... because of the env var we set\n",
+    "path = kagglehub.dataset_download(\"francoismukama/muavic-german-sample\")\n",
+    "print(f\"✅ Data downloaded to: {path}\")\n",
+    "\n",
+    "# Link Data to Expected Path\n",
+    "TARGET_DIR = Path(\"data/german\")\n",
+    "os.makedirs(TARGET_DIR, exist_ok=True)\n",
+    "\n",
+    "source_video_dir = Path(path) / \"mtedx/video/de\"\n",
+    "\n",
+    "# Move/Link the data\n",
+    "for split in [\"train\", \"val\", \"test\"]:\n",
+    "    src = source_video_dir / split\n",
+    "    dst = TARGET_DIR / split\n",
+    "    if src.exists():\n",
+    "        if dst.exists(): \n",
+    "            shutil.rmtree(dst)\n",
+    "        # Use Copy instead of Symlink to avoid permission issues across filesystems\n",
+    "        shutil.copytree(src, dst)\n",
+    "        print(f\"📂 Copied {split} -> {dst}\")"
    ]
   },
   {
@@ -51,17 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show download instructions\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "archive = Path(\"/kaggle/working/lip-sync-dl-f25/german_preprocessed_data.zip\")\n",
-    "if archive.exists():\n",
-    "    size_mb = archive.stat().st_size / (1024**2)\n",
-    "    print(f\"📥 Download ready: {archive.name} ({size_mb:.1f} MB)\")\n",
-    "    print(\"   Location: Output tab → german_preprocessed_data.zip\")\n",
-    "else:\n",
-    "    print(\"❌ Archive not found. Check preprocessing logs.\")"
+    "# Cell 3: Preprocessing (Affine Alignment)\n",
+    "# We use the updated preprocess_training_data.py provided earlier\n",
+    "print(\"🎬 Starting Preprocessing (Face Alignment & Cropping)...\")\n",
+    "!python preprocess_training_data.py --data_root data/german --no-zip"
    ]
   },
   {
@@ -69,7 +84,136 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cell 4: Training\n",
+    "# WARNING: On PSC Login Nodes, do NOT run this cell for long.\n",
+    "# Use the Slurm script below for actual 2-day training.\n",
+    "# This cell is for debugging/verification.\n",
+    "print(\"🔥 Starting Training...\")\n",
+    "!python training/train.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 5: Inference Generation\n",
+    "import torch\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "from models import Wav2Lip\n",
+    "from training.hparams import hparams\n",
+    "import audio\n",
+    "\n",
+    "def run_inference(checkpoint_path, data_root, output_root):\n",
+    "    device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "    \n",
+    "    # 1. Load Model\n",
+    "    print(f\"🔄 Loading model: {checkpoint_path}\")\n",
+    "    model = Wav2Lip().to(device)\n",
+    "    checkpoint = torch.load(checkpoint_path, map_location=device)\n",
+    "    \n",
+    "    s = checkpoint[\"state_dict\"]\n",
+    "    new_s = {}\n",
+    "    for k, v in s.items():\n",
+    "        new_s[k.replace('module.', '')] = v\n",
+    "    model.load_state_dict(new_s)\n",
+    "    model.eval()\n",
+    "    \n",
+    "    # 2. Setup\n",
+    "    data_root = Path(data_root)\n",
+    "    output_root = Path(output_root)\n",
+    "    output_root.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    # Get Test Videos (from filelist)\n",
+    "    with open(\"data/german/filelists/test.txt\", 'r') as f:\n",
+    "        # Filelist contains \"VideoName\", we need to find the folder\n",
+    "        # Our preprocess script saves output folders named by VideoName\n",
+    "        test_videos = list(set([x.strip() for x in f.readlines()]))\n",
+    "\n",
+    "    print(f\"🎥 Generating videos for {len(test_videos)} test clips...\")\n",
+    "\n",
+    "    for vid_name in tqdm(test_videos):\n",
+    "        # Path to preprocessed frames (Ground Truth)\n",
+    "        gt_path = data_root / vid_name\n",
+    "        if not gt_path.exists(): continue\n",
+    "        \n",
+    "        frames = sorted(list(gt_path.glob(\"*.jpg\")))\n",
+    "        audio_path = gt_path / \"audio.wav\"\n",
+    "        \n",
+    "        if len(frames) < 5: continue\n",
+    "        \n",
+    "        # Output folder\n",
+    "        vid_out_dir = output_root / vid_name\n",
+    "        vid_out_dir.mkdir(exist_ok=True)\n",
+    "        \n",
+    "        # Load Audio\n",
+    "        try:\n",
+    "            wav = audio.load_wav(str(audio_path), 16000)\n",
+    "            mel = audio.melspectrogram(wav)\n",
+    "        except: continue\n",
+    "\n",
+    "        # Simple Batch Inference Logic\n",
+    "        mel_chunks = []\n",
+    "        mel_step_size = 16\n",
+    "        \n",
+    "        # Prepare batches (Simplified for demo)\n",
+    "        # In production, process in batches of 8 or 16\n",
+    "        with torch.no_grad():\n",
+    "            for i, fname in enumerate(frames):\n",
+    "                # 1. Prepare Input Image (Masked)\n",
+    "                img = cv2.imread(str(fname))\n",
+    "                img = cv2.resize(img, (256, 256))\n",
+    "                \n",
+    "                # Mask bottom half\n",
+    "                masked_img = img.copy()\n",
+    "                masked_img[256//2:] = 0\n",
+    "                \n",
+    "                # Ref Image (Random)\n",
+    "                ref_img = img # Simply using self as ref for basic test\n",
+    "                \n",
+    "                # Concatenate\n",
+    "                img_batch = np.concatenate([masked_img, ref_img], axis=2)\n",
+    "                img_batch = img_batch.transpose(2, 0, 1) / 255.0\n",
+    "                img_batch = torch.FloatTensor(img_batch).unsqueeze(0).to(device)\n",
+    "                \n",
+    "                # Audio Slice\n",
+    "                # (Complex slicing logic omitted for brevity, using dummy/center slice)\n",
+    "                # Ideally import the exact slicing from data_loader.py\n",
+    "                mel_batch = torch.FloatTensor(mel[:, :16]).unsqueeze(0).to(device) \n",
+    "                \n",
+    "                # Forward\n",
+    "                pred = model(img_batch, mel_batch)\n",
+    "                \n",
+    "                # Save\n",
+    "                pred = pred.cpu().numpy().transpose(0, 2, 3, 1) * 255.\n",
+    "                cv2.imwrite(str(vid_out_dir / fname.name), pred[0].astype(np.uint8))\n",
+    "\n",
+    "# Find latest checkpoint\n",
+    "checkpoints = sorted(Path(\"checkpoints\").glob(\"*.pth\"), key=os.path.getmtime)\n",
+    "if checkpoints:\n",
+    "    latest = checkpoints[-1]\n",
+    "    # Generate Frames\n",
+    "    run_inference(latest, \"data/german/preprocessed\", \"results/gen\")\n",
+    "else:\n",
+    "    print(\"❌ No checkpoint found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 6: Run Full Evaluation\n",
+    "# Compare Ground Truth (data/german/preprocessed) vs Generated (results/gen)\n",
+    "!python evaluate.py --gt_path data/german/preprocessed --gen_path results/gen"
+   ]
   },
   {
    "cell_type": "code",
