--- a/video_dub.ipynb
+++ b/video_dub.ipynb
@@ -349,31 +349,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Full Inference Pipeline ---\n",
+        "# --- Full Batch Inference ---\n",
         "import os\n",
         "import shutil\n",
         "\n",
-        "# 1. Check for ffmpeg (Crucial for Audio Processing)\n",
+        "# 1. Verify FFmpeg (Required for audio processing)\n",
         "if not shutil.which(\"ffmpeg\"):\n",
-        "    print(\"❌ FFmpeg not found!\")\n",
-        "    print(\"ℹ️ On PSC/HPC, try running: 'module load ffmpeg' in your terminal before launching notebook.\")\n",
+        "    print(\"❌ FFmpeg not found! Please install it (e.g., 'apt-get install ffmpeg' or 'module load ffmpeg').\")\n",
         "else:\n",
         "    print(\"✅ FFmpeg found.\")\n",
         "\n",
-        "# 2. Set Path\n",
+        "# 2. Set PYTHONPATH so internal imports work\n",
         "os.environ['PYTHONPATH'] = f\"{os.getcwd()}:{os.getcwd()}/Wav2Lip\"\n",
         "\n",
-        "# 3. Define Test Video\n",
-        "# Update this path to a real video inside your 'data/german' folder\n",
-        "TEST_VIDEO = \"data/german/test/sample.mp4\"\n",
+        "# 3. Define Input/Output\n",
+        "# Run on the TEST set to evaluate performance\n",
+        "INPUT_DIR = \"data/german/test\"\n",
+        "OUTPUT_DIR = \"results/dubbed_test\"\n",
         "\n",
-        "if os.path.exists(TEST_VIDEO):\n",
-        "    print(f\"🚀 Running Pipeline on: {TEST_VIDEO}\")\n",
-        "\n",
-        "    # Run the corrected main.py\n",
-        "    !python pipeline/main.py\n",
-        "else:\n",
-        "    print(f\"⚠️ Test video not found at {TEST_VIDEO}. Please upload a video or check the path.\")"
+        "# 4. Run the Pipeline\n",
+        "print(f\"🚀 Starting Batch Inference on {INPUT_DIR}...\")\n",
+        "!python pipeline/main.py \\\n",
+        "    --input_path \"{INPUT_DIR}\" \\\n",
+        "    --output_root \"{OUTPUT_DIR}\" \\\n",
+        "    --source_lang \"german\""
       ],
       "metadata": {
         "colab": {
